# gst-dynamic-examples

./: CMakeLists.txt  README.md  change_filter.c  dynamic_examples.c
